[package]
edition = "2024"
name = "blight-rs"
description = "Data-oriented unsafe memory allocator and mimalloc ffi bindings"

version = "0.1.0"
authors = ["Matthew McDade <nvllmnd@protonmail.com>"]
repository = "https://github.com/nvllmnd/blight-rs/tree/no-masters/blight-rs"
keywords = [
  "allocator",
  "mimalloc-bindgen",
  "mimalloc",
  "mimalloc-rs",
  "mimalloc-system",
  "mimalloc-sys",
  "unsafe api",
  "memory",
  "data oriented",
  "heap",
]
categories = ["memory-management", "api-bindings", "c-bindings", "ffi"]
license = "GPL-3"


[dependencies]
anyhow = { version = "1.0.100", default-features = false }
mimalloc-bindgen = { path = "../mimalloc-bindgen/" }
